# polars-workshop

./: README.md  pyproject.toml
src/polars_workshop/: 1_discover.ipynb  2_first_exercises.ipynb  3_5_create_big_df.py  3_processing_speed.ipynb  4_lazy_evaluation.md  4_lazy_evaluation.py  __init__.py  spotify_tracks_1_non_numerical.parquet  spotify_tracks_1_numerical.parquet  spotify_tracks_2_non_numerical.parquet  spotify_tracks_2_numerical.parquet
