[project]
name = "polars-workshop"
version = "0.1.0"
description = "datacraft workshop on polars"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.5.0",
    "ipykernel>=6.29.5",
    "hvplot>=0.10.0",
    "pyarrow>=17.0.0",
    "scalene>=1.5.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
